<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dwoodru3.blackjack.MainActivity"
    android:background="@color/colorFelt"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:layout_weight="8"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dealer_wins_textview"
                android:text="@string/dealer_wins"
                android:layout_weight="1"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorWhite"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dealer_score_textview"
                android:text="@string/dealer_score"
                android:layout_gravity="left"
                android:background="@drawable/box"
                android:padding="3dp"
                android:layout_marginBottom="5dp"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:id="@+id/d1_card_imageview"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:scaleType="fitCenter"
                android:background="@color/colorFeltDark"

                />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:id="@+id/d2_card_imageview"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:scaleType="fitCenter"
                android:background="@color/colorFeltDark"
                />


            <ImageView
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:id="@+id/d3_card_imageview"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:scaleType="fitCenter"
                android:background="@color/colorFeltDark"
                />


            <ImageView
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:id="@+id/d4_card_imageview"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:scaleType="fitCenter"
                android:background="@color/colorFeltDark"
                />


            <ImageView
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:id="@+id/d5_card_imageview"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:scaleType="fitCenter"
                android:background="@color/colorFeltDark"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_wins_textview"
                android:text="@string/player_wins"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_score_textview"
                android:text="@string/player_score"
                android:layout_gravity="left"
                android:background="@drawable/box"
                android:padding="3dp"
                android:layout_marginBottom="5dp"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:id="@+id/p1_card_imageview"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:scaleType="fitCenter"
                android:background="@color/colorFeltDark"

                />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:id="@+id/p2_card_imageview"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:scaleType="fitCenter"
                android:background="@color/colorFeltDark"
                />


            <ImageView
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:id="@+id/p3_card_imageview"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:scaleType="fitCenter"
                android:background="@color/colorFeltDark"
                />


            <ImageView
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:id="@+id/p4_card_imageview"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:scaleType="fitCenter"
                android:background="@color/colorFeltDark"
                />


            <ImageView
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:id="@+id/p5_card_imageview"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:scaleType="fitCenter"
                android:background="@color/colorFeltDark"
                />

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="right"
    android:layout_weight="1"
    android:paddingLeft="16dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bank_textview"
            android:text="@string/bank"
            android:layout_weight="3"
            android:gravity="right"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bank_amount_textview"
            android:text="@string/bank_amount"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bet_textview"
            android:text="@string/bet"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bet_edittext"
            android:hint="@string/tap_to_change_bet"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="14dp"
            android:inputType="number"
            android:digits="1234567890"
            android:textColor="@color/colorWhite"
            />

    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hit_button"
        android:text="hit"
        android:onClick="clickHit"
        android:layout_weight="1"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorButtonBlue"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stand_button"
        android:text="Stand"
        android:onClick="clickStand"
        android:layout_weight="1"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorButtonBlue"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/double_button"
        android:text="New Hand"
        android:onClick="clickResetGame"
        android:layout_weight="1"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorButtonBlue"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rules_button"
            android:onClick="clickRules"
            android:text="Rules"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorButtonBlue"
            />

</LinearLayout>


</LinearLayout>
